@@ -21,17 +21,9 @@
 
 include_HEADERS = libcob.h
 
-SUBDIRS = lib libcob cobc bin config copy po doc extras tests
+SUBDIRS = . lib libcob bin cobc config copy po doc extras tests
 
-# define prerequisites to fix parallel builds
-libcob: defaults.h lib
-cobc: libcob
-bin: libcob
-po: cobc
-doc: cobc
-extras: cobc
-test: bin cobc
-check: bin cobc
+all: tarstamp.h defaults.h
 
 ACLOCAL_AMFLAGS = -I m4 --install
 BUILT_SOURCES = defaults.h
@@ -55,11 +47,12 @@ FILES_TO_BE_EXECUTABLE = $(dist_noinst_SCRIPTS) \
 	build_aux/depcomp build_aux/install-sh build_aux/ltmain.sh build_aux/mdate-sh \
 	build_aux/missing build_aux/mkinstalldirs build_aux/ylwrap
 
-# all but the tarstam.h parts should not be necessary...
+tarstamps = $(top_distdir)/tarstamp.h tarstamp.h
+
+# all parts but tarstamp.h should not be necessary...
 dist-hook:
-	echo "#define COB_TAR_DATE    \"`LC_ALL=C date -u +'%b %d %Y %T'` UTC\"" > $(top_distdir)/tarstamp.h
-	echo "#define COB_NUM_TAR_DATE ` LC_ALL=C date -u +'%Y%m%d'`"           >> $(top_distdir)/tarstamp.h
-	echo "#define COB_NUM_TAR_TIME ` LC_ALL=C date -u +'%H%M%S'`"           >> $(top_distdir)/tarstamp.h
+	rm -f $(top_distdir)/tarstamp.h
+	$(MAKE) $(AM_MAKEFLAGS) $(top_distdir)/tarstamp.h
 # fix access to cater for bad version control use / copy / read-only file system
 	find $(top_distdir) -type d -print | xargs chmod 755	# otherwise directories have 777
 	find $(top_distdir) -type f -print | xargs chmod 644	# otherwise files are unchanged but with u+r
@@ -93,7 +86,7 @@ distwin-zip: distwin
 	zip -rq "$(distwindir).zip" "$(distwindir)"
 
 defaults.h: Makefile.am $(top_builddir)/config.status
-	@echo "Creating defaults.h..."
+	@echo "Creating $@..."
 	@{								\
 	  echo "/* Automatically generated by Makefile */";		\
 	  echo "#define COB_CC           \"$(COB_CC)\"";		\
@@ -112,8 +105,16 @@ defaults.h: Makefile.am $(top_builddir)/config.status
 	  echo "#define LOCALEDIR        \"$(localedir)\"";	\
 	} > defaults.h
 
+$(tarstamps):
+	@echo "Creating $@..."
+	@{								\
+	  echo "#define COB_TAR_DATE    \"`LC_ALL=C date -u +'%b %d %Y %T'` UTC\""; \
+	  echo "#define COB_NUM_TAR_DATE ` LC_ALL=C date -u +'%Y%m%d'`"; \
+	  echo "#define COB_NUM_TAR_TIME ` LC_ALL=C date -u +'%H%M%S'`"; \
+	} > $@
 
-# targets that are only logical targets instead of files
+
+# targets that are only logical targets and should always be executed
 .PHONY: test checkall checkmanual
 
 test: all
