@@ -23,7 +23,6 @@
     <ProjectGuid>{924DB760-86F4-4B70-9000-0E883630ED51}</ProjectGuid>
     <RootNamespace>cobc</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
