@@ -23,7 +23,6 @@
     <ProjectGuid>{6D310774-FCE5-447B-93E3-BB8FAD3DA946}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>libsupport</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
